@@ -1,5 +1,11 @@
 ==
 
+* Allow math to be rendered with MathJax! Enclose math with $ or $$,
+  by default we are using MathJax online, but you can set this to
+  your local installation as well. MathJax is enabled by default,
+  and can also be enabled only for certain tags.
+
+* Do not load remote images or resources from html files
 * C-m: adds 'muted' tag, 'muted' messages are excluded from non-explicit
        searches.
 *   v: refine query.
